[gd_scene load_steps=17 format=3 uid="uid://btdikxgrrynh0"]

[ext_resource type="Script" uid="uid://dtsyf8086rgp8" path="res://scenes scripts/room_1.gd" id="1_sxflw"]
[ext_resource type="PackedScene" uid="uid://dl38kx6c4srqv" path="res://scenes scripts/cabels_2.tscn" id="2_op5hc"]
[ext_resource type="Material" uid="uid://bx6bxqa7wcar2" path="res://materials/bottom1.tres" id="3_exsa0"]
[ext_resource type="PackedScene" uid="uid://c8fhprlvt2e6o" path="res://scenes scripts/door.tscn" id="4_ultg0"]
[ext_resource type="PackedScene" uid="uid://cusattjn2rljb" path="res://scenes scripts/tubes1.tscn" id="5_n307y"]
[ext_resource type="BoxMesh" uid="uid://dxgevu6pysyxk" path="res://wallmesh/wallmesh3.tres" id="5_sxflw"]
[ext_resource type="Texture2D" uid="uid://ckrwqrwqvl5i5" path="res://sprites/board1.png" id="7_sxflw"]
[ext_resource type="PackedScene" uid="uid://b24olo70jj02w" path="res://scenes scripts/box_1.tscn" id="8_exsa0"]
[ext_resource type="PackedScene" uid="uid://kjde5ai2vtwd" path="res://scenes scripts/box_2.tscn" id="9_ultg0"]
[ext_resource type="PackedScene" uid="uid://rlv6x1sbjgi0" path="res://scenes scripts/box_4.tscn" id="10_ultg0"]

[sub_resource type="QuadMesh" id="QuadMesh_v056k"]
material = ExtResource("3_exsa0")
size = Vector2(12, 10)
center_offset = Vector3(-5, 0, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_ejhko"]
size = Vector3(12, 10, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_v056k"]
size = Vector3(10, 3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8hs0m"]
albedo_texture = ExtResource("7_sxflw")
texture_filter = 2

[sub_resource type="QuadMesh" id="QuadMesh_exsa0"]
material = SubResource("StandardMaterial3D_8hs0m")
size = Vector2(2, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ccg18"]
size = Vector3(10, 3, 10)

[node name="endroom 1" type="Node3D"]
script = ExtResource("1_sxflw")
RandomBox = false
RandomNumBoxes = false
NumBoxes1 = 2
NumBoxes3 = 0
NumBoxes4 = 0
NumBasket1 = 1
SceneCabels1 = ExtResource("2_op5hc")
isendroom1 = true

[node name="NavigationRegion3D" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D"]

[node name="bottom" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D" groups=["navi"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1, 0, 0)
mesh = SubResource("QuadMesh_v056k")
skeleton = NodePath("")

[node name="bottomcoll" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 0, 0)
shape = SubResource("BoxShape3D_ejhko")

[node name="door" parent="NavigationRegion3D/StaticBody3D" instance=ExtResource("4_ultg0")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12, 1, 0)

[node name="tubes" parent="NavigationRegion3D/StaticBody3D" instance=ExtResource("5_n307y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, -4.55)

[node name="tubes2" parent="NavigationRegion3D/StaticBody3D" instance=ExtResource("5_n307y")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -8, 1.5, -4.7)

[node name="tubes3" parent="NavigationRegion3D/StaticBody3D" instance=ExtResource("5_n307y")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7, 2, 4.55)

[node name="tubes4" parent="NavigationRegion3D/StaticBody3D" instance=ExtResource("5_n307y")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, -9.5, 2.1, 4.7)

[node name="tubes5" parent="NavigationRegion3D/StaticBody3D" instance=ExtResource("5_n307y")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, -10.3, 1.1, 4.7)

[node name="wall1" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1.2, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, 5)
mesh = ExtResource("5_sxflw")
skeleton = NodePath("../bottom")

[node name="wallcoll1" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, 5)
shape = SubResource("BoxShape3D_v056k")

[node name="wall2" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1.2, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, -5)
mesh = ExtResource("5_sxflw")
skeleton = NodePath("../bottom")

[node name="wallcoll2" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, -5)
shape = SubResource("BoxShape3D_v056k")

[node name="wall3" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-1.74846e-08, 0, 1, 0, 1, 0, -0.4, 0, -4.37114e-08, -12, 1.5, -3)
mesh = ExtResource("5_sxflw")
skeleton = NodePath("../bottom")

[node name="wallcoll3" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-1.74846e-08, 0, 1, 0, 1, 0, -0.4, 0, -4.37114e-08, -12, 1.5, -2.98)
shape = SubResource("BoxShape3D_v056k")

[node name="wall4" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-1.74846e-08, 0, 1, 0, 1, 0, -0.4, 0, -4.37114e-08, -12, 1.5, 3)
mesh = ExtResource("5_sxflw")
skeleton = NodePath("../bottom")

[node name="wallcoll4" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-1.74846e-08, 0, 1, 0, 1, 0, -0.4, 0, -4.37114e-08, -12, 1.5, 3.02)
shape = SubResource("BoxShape3D_v056k")

[node name="wall5" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-8.74228e-09, 0, 1, 0, 0.33, 0, -0.2, 0, -4.37114e-08, -12, 2.50299, 0)
mesh = ExtResource("5_sxflw")
skeleton = NodePath("../bottom")

[node name="wallcoll5" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-8.74228e-09, 0, 1, 0, 0.33, 0, -0.2, 0, -4.37114e-08, -12, 2.50299, 0)
shape = SubResource("BoxShape3D_v056k")

[node name="board1" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(-1, 0, -8.9407e-08, 7.94093e-23, 1, 0, 8.9407e-08, 0, -1, -3.7, 1.6, 4.9)
mesh = SubResource("QuadMesh_exsa0")

[node name="boxes" type="Node3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.4, 0, -3.4)

[node name="box1" parent="NavigationRegion3D/StaticBody3D/boxes" instance=ExtResource("8_exsa0")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0.900001, 0.5, -0.4)

[node name="box2" parent="NavigationRegion3D/StaticBody3D/boxes" instance=ExtResource("8_exsa0")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -0.599999, 0.5, 0.7)

[node name="box3" parent="NavigationRegion3D/StaticBody3D/boxes" instance=ExtResource("9_ultg0")]
transform = Transform3D(0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -0.9, 0.5, -0.8)

[node name="box4" parent="NavigationRegion3D/StaticBody3D/boxes" instance=ExtResource("8_exsa0")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 4.5, 0.5, -0.3)

[node name="box5" parent="NavigationRegion3D/StaticBody3D/boxes" instance=ExtResource("10_ultg0")]
transform = Transform3D(0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -0.6, 1.5, 0.6)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ccg18")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
